fixed overflow issue

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -34,6 +34,7 @@ div[class="you text-format"] {
 .chat-body {
   min-height: 30rem;
   max-height: 30rem;
+  overflow-y: scroll;
 }
 
 form > div {
